fix(Regsiter): fixed overflowing form

--- a/src/index.css
+++ b/src/index.css
@@ -118,3 +118,11 @@ h6 {
   background-repeat: no-repeat;
   /* background-position: 50% 100%; */
 }
+
+.hidde-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.hidde-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none;
+}
